--- a/index.html
+++ b/index.html
@@ -158,6 +158,45 @@
                 </ul>
             </div>
         </section>
+
+        <section class="s-google">
+            <div class="container">
+                <header class="google-title">
+                    <img loading="lazy" src="" alt="">
+                    <img src="" alt="">
+                    <p>Com base em <strong>59 avaliações.</strong> </p>
+                </header>
+                <div class="content-google">
+                    <ul>
+                        <li class="avaliacao">
+                            <img src="assets/stars.svg" alt="">
+                            <h4>Gabi Monteiro</h4>
+                            <p>Parabéns pela qualidade do produto. O travesseiro é bem confortável Há um mês</p>
+                        </li>
+                        <li class="avaliacao">
+                            <img src="assets/stars.svg" alt="">
+                            <h4>Flávio Almeida</h4>
+                            <p>Maravilhosos!!! comprem sem medo eles são ótimo e bem resistentes eu estou adorando!!!</p>
+                        </li>
+                        <li class="avaliacao">
+                            <img src="assets/stars.svg" alt="">
+                            <h4>Marcela</h4>
+                            <p>Tudo de bom adorei muito confortável eu gosto do travesseiro mais alto antes eu precisava ter vários travesseiros que ficava escorrendo agora eu não tenho mais este problema obrigado pelo solução RVFIT amo essa empresa!!! [RECOMENDO]</p>
+                        </li>
+                        <li class="avaliacao">
+                            <img src="assets/stars.svg" alt="">
+                            <h4>Paulo Deluca</h4>
+                            <p>Satisfeito, travesseiro de ótima qualidade, excelente relação custo benefício inclusive indiquei alguns pacientes da clínica para comprar com vocês, obrigado!</p>
+                        </li>
+                        <li class="avaliacao">
+                            <img src="assets/stars.svg" alt="">
+                            <h4>Ivana silva</h4>
+                            <p>Muito bom Super Recomendo, comprei para mim e meu esposo que roncava demais nossa agora são noites silenciosas nota 10, 5 estrelas vocês merecem todas</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
