--- a/index.html
+++ b/index.html
@@ -117,22 +117,23 @@
                     <h3>São 4 opções de altura para você se sentir confortável em qualquer posição seja de frente, de lado ou de bruços.</h3>
                 </header>
                 <div class="content-altura_regulavel">
+                    
                     <img loading="lazy" src="assets/travesseiro.webp" alt="" width="512" height="364" />
                     <ul class="altura_regulavel_items">
                         <li class="altura_regulavel_item">
-                            <img src="assets/baixo.svg" alt="">
+                            <svg class="icon icon-baixo"><use xlink:href="assets/i.svg#icon-baixo"></use></svg>
                             <p>Baixo</p>
                         </li>
                         <li class="altura_regulavel_item">
-                            <img src="assets/medio.svg" alt="">
+                            <svg class="icon icon-baixo"><use xlink:href="assets/i.svg#icon-medio"></use></svg>
                             <p>Médio</p>
                         </li>
                         <li class="altura_regulavel_item">
-                            <img src="assets/medio-alto.svg" alt="">
+                            <svg class="icon icon-baixo"><use xlink:href="assets/i.svg#icon-medio-alto"></use></svg>
                             <p>Médio / Alto</p>
                         </li>
                         <li class="altura_regulavel_item">
-                            <img src="assets/alto.svg" alt="">
+                            <svg class="icon icon-baixo"><use xlink:href="assets/i.svg#icon-alto"></use></svg>
                             <p>Alto</p>
                         </li>
                     </ul>
@@ -162,34 +163,55 @@
         <section class="s-google">
             <div class="container">
                 <header class="google-title">
-                    <img loading="lazy" src="" alt="">
-                    <img src="" alt="">
+                    <h2>99% dos feedbacks são positivos</h2>
+                    <svg class="icon logo-google"><use xlink:href="assets/i.svg#logo-google"></use></svg>
+                    <svg class="icon stars-google"><use xlink:href="assets/i.svg#stars-google"></use></svg>
                     <p>Com base em <strong>59 avaliações.</strong> </p>
                 </header>
                 <div class="content-google">
                     <ul>
                         <li class="avaliacao">
-                            <img src="assets/stars.svg" alt="">
+                            <svg class="icon icon-stars"><use xlink:href="assets/i.svg#icon-stars"></use></svg>
+                            <svg class="icon icon-stars"><use xlink:href="assets/i.svg#icon-stars"></use></svg>
+                            <svg class="icon icon-stars"><use xlink:href="assets/i.svg#icon-stars"></use></svg>
+                            <svg class="icon icon-stars"><use xlink:href="assets/i.svg#icon-stars"></use></svg>
+                            <svg class="icon icon-stars"><use xlink:href="assets/i.svg#icon-stars"></use></svg>
                             <h4>Gabi Monteiro</h4>
                             <p>Parabéns pela qualidade do produto. O travesseiro é bem confortável Há um mês</p>
                         </li>
                         <li class="avaliacao">
-                            <img src="assets/stars.svg" alt="">
+                            <svg class="icon icon-stars"><use xlink:href="assets/i.svg#icon-stars"></use></svg>
+                            <svg class="icon icon-stars"><use xlink:href="assets/i.svg#icon-stars"></use></svg>
+                            <svg class="icon icon-stars"><use xlink:href="assets/i.svg#icon-stars"></use></svg>
+                            <svg class="icon icon-stars"><use xlink:href="assets/i.svg#icon-stars"></use></svg>
+                            <svg class="icon icon-stars"><use xlink:href="assets/i.svg#icon-stars"></use></svg>
                             <h4>Flávio Almeida</h4>
                             <p>Maravilhosos!!! comprem sem medo eles são ótimo e bem resistentes eu estou adorando!!!</p>
                         </li>
                         <li class="avaliacao">
-                            <img src="assets/stars.svg" alt="">
+                            <svg class="icon icon-stars"><use xlink:href="assets/i.svg#icon-stars"></use></svg>
+                            <svg class="icon icon-stars"><use xlink:href="assets/i.svg#icon-stars"></use></svg>
+                            <svg class="icon icon-stars"><use xlink:href="assets/i.svg#icon-stars"></use></svg>
+                            <svg class="icon icon-stars"><use xlink:href="assets/i.svg#icon-stars"></use></svg>
+                            <svg class="icon icon-stars"><use xlink:href="assets/i.svg#icon-stars"></use></svg>
                             <h4>Marcela</h4>
                             <p>Tudo de bom adorei muito confortável eu gosto do travesseiro mais alto antes eu precisava ter vários travesseiros que ficava escorrendo agora eu não tenho mais este problema obrigado pelo solução RVFIT amo essa empresa!!! [RECOMENDO]</p>
                         </li>
                         <li class="avaliacao">
-                            <img src="assets/stars.svg" alt="">
+                            <svg class="icon icon-stars"><use xlink:href="assets/i.svg#icon-stars"></use></svg>
+                            <svg class="icon icon-stars"><use xlink:href="assets/i.svg#icon-stars"></use></svg>
+                            <svg class="icon icon-stars"><use xlink:href="assets/i.svg#icon-stars"></use></svg>
+                            <svg class="icon icon-stars"><use xlink:href="assets/i.svg#icon-stars"></use></svg>
+                            <svg class="icon icon-stars"><use xlink:href="assets/i.svg#icon-stars"></use></svg>
                             <h4>Paulo Deluca</h4>
                             <p>Satisfeito, travesseiro de ótima qualidade, excelente relação custo benefício inclusive indiquei alguns pacientes da clínica para comprar com vocês, obrigado!</p>
                         </li>
                         <li class="avaliacao">
-                            <img src="assets/stars.svg" alt="">
+                            <svg class="icon icon-stars"><use xlink:href="assets/i.svg#icon-stars"></use></svg>
+                            <svg class="icon icon-stars"><use xlink:href="assets/i.svg#icon-stars"></use></svg>
+                            <svg class="icon icon-stars"><use xlink:href="assets/i.svg#icon-stars"></use></svg>
+                            <svg class="icon icon-stars"><use xlink:href="assets/i.svg#icon-stars"></use></svg>
+                            <svg class="icon icon-stars"><use xlink:href="assets/i.svg#icon-stars"></use></svg>
                             <h4>Ivana silva</h4>
                             <p>Muito bom Super Recomendo, comprei para mim e meu esposo que roncava demais nossa agora são noites silenciosas nota 10, 5 estrelas vocês merecem todas</p>
                         </li>
@@ -197,10 +219,93 @@
                 </div>
             </div>
         </section>
+
+        <section class="s-depoimentos">
+            <div class="container">
+                <div class="depoimentos-title">
+                    <h2>Assiste a os depoimentos da quem usa o Travesseiro Regulável RVFIT</h2>
+                    <h3>Estamos felizes em receber sempre elogios de nossos clientes, com retorno de <strong>99% de feedback positivo.</strong> </h3>
+                </div>
+                <div class="content-depoimentos">
+
+                </div>
+            </div>
+        </section>
+
+        <section class="s-offer">
+            <div class="container">
+                <div class="offer-title">
+                    <h2>Você deseja ter um sono <strong> 10X mais relaxante</strong> e reparador?
+                        Deseja <strong> diminuir até 75% das suas dores</strong> após o sono?</h2>
+                    
+                    <h3>Temos uma <b> oferta imperdível</b> para você!</h3>
+                </div> 
+                <ul class="content-offer">
+                        <a href="https://app.monetizze.com.br/checkout/DCB167371" target="_blank" rel="noopener noreferrer"><li><img src="assets/plano-1.webp" alt="preço do travesseiro regulável" width="280" height="517"></li></a>
+                        <a href="https://app.monetizze.com.br/checkout/DRB167372" target="_blank" rel="noopener noreferrer"><li><img src="assets/plano-2.webp" alt="preço do travesseiro regulável" width="280" height="517"></li></a>
+                        <a href="https://app.monetizze.com.br/checkout/DRB167372" target="_blank" rel="noopener noreferrer"><li><img src="assets/plano-3.webp" alt="preço do travesseiro regulável" width="280" height="517"></li></a>
+                </ul>
+                <img class="selos" loading="lazy" src="assets/selos.webp" alt="selos de garantia" width="410" height="37">   
+            </div>
+        </section>
+        <section class="s-faq">
+            <div class="container">
+                <h2>Respondemos algumas perguntas confira aqui!</h2>
+
+                <div class="content-faq">
+                    <details>
+                        <summary>Em quanto tempo consigo sentir a diferença no meu corpo?</summary>
+                        <p>A diferença pode ser percebida logo na primeira noite de sono.</p>
+                    </details>
+                    <details>
+                        <summary>Como regular a altura?</summary>
+                        <p>Para regular a altura, você deve abrir o zíper lateral e fazer o controle através das camadas.</p>
+                    </details>
+                    <details>
+                        <summary>O travesseiro RVFIT é para todos?</summary>
+                        <p>O travesseiro RVFIT pode ser usado por adultos e crianças devido ao seu controle de altura e é vedado o uso, apenas para pessoas usuárias de marca passo.</p>
+                    </details>
+                    <details>
+                        <summary>Como funciona a garantia?</summary>
+                        <p>A garantia é de xxxxx dias para defeitos de fabricação.</p>
+                    </details>
+                    <details>
+                        <summary>Qual o prazo de entrega?</summary>
+                        <p>Somo uma empresa Nacional com estoque no Brasil, nosso prazo de entrega é de até xxxx dias.</p>
+                    </details>
+                    <details>
+                        <summary>Qual a altura do travesseiro?</summary>
+                        <p>O travesseiro regulável da RVFIT vai de 5 a 12 cm podendo ser regulado conforme a sua necessidade.</p>
+                    </details>
+                    <details>
+                        <summary>Como higienizar o travesseiro regulável RVFIT?</summary>
+                        <p>Indicamos usar fronha impermeável e outra de algodão, para que se higienize apenas as fronhas , para manter seu travesseiro livre de ácaros e bactérias.</p>
+                    </details>
+                    <details>
+                        <summary>Qual a garantia?</summary>
+                        <p>Confiamos tanto na qualidade do RVFIT que oferecemos uma Garantia DE 3 meses , conforto, qualidade e tecnologia juntos em um único travesseiro.</p>
+                    </details>
+                    <details>
+                        <summary>A capa é fixa ou removível?</summary>
+                        <p>A capa é fixa, sugerimos colocar fronha impermeável e de algodão.</p>
+                    </details>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
-
+            <div class="container">
+                <svg class="logo"><use xlink:href="assets/i.svg#logo"></use></svg>
+                <p>Dúvidas? entre em contato conosco: atendimento@rvfit.com.br ou (11) 94973-7100</p>
+                <nav>
+                    <ul>
+                        <li> <a href="http://" target="_blank" rel="noopener noreferrer">Politica de privacidade</a> </li>
+                        <li><a href="http://" target="_blank" rel="noopener noreferrer">Termos de uso</a> </li>
+                    </ul>
+                </nav>
+                <p>Copyright 2022 – RVFIT LTDA CNPJ:12.416.634/0001-09 |Todos os Direitos Reservados </p>
+            </div>
     </footer>
 </body>
 </html>
