--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <link rel="author" href="https://rodolfocoprodutor.com.br" />
     <meta name="robots" content="index, follow" />
     <meta name="language" content="Portuguese" />
-    <link rel="icon" type="image/png" href="favicon.png" />
+    <link rel="icon" type="image/png" href="shared/favicon.png" />
 
     <!-- Google+ / Schema.org -->
     <meta itemprop="name" content="Travesseiro altura regulável" />
     <meta itemprop="description" content="Travesseiro altura regulável, Tenha um sono 10X mais relaxante e reparador logo nas primeira noite!." />
-    <meta itemprop="image" content="share.jpg" />
+    <meta itemprop="image" content="shared/thumbnail.webp" />
     <link rel="publisher" href="https://plus.google.com/+suapagina" />
 
     <!-- Open Graph / Facebook & Whatsapp & Instagram -->
@@ -29,7 +29,7 @@
     <meta property="og:url" content="https://www.travesseirorvfit.com.br" />
     <meta property="og:site_name" content="Travesseiro altura regulável" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="share.jpg" />
+    <meta property="og:image" content="share/thumbnail.webp" />
     <meta property="og:locale" content="pt_BR" />
     <meta property="og:image:type" content="image/jpg" />
     <meta property="og:image:width" content="300" />
@@ -40,7 +40,7 @@
     <meta name="twitter:description" content="Travesseiro altura regulável, Tenha um sono 10X mais relaxante e reparador logo nas primeira noite!." />
     <meta name="twitter:url" content="https://www.travesseirorvfit.com.br" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image" content="share.jpg" />
+    <meta name="twitter:image" content="shared/thumbnail.webp" />
     <meta name="twitter:creator" content="@author" />
 
     <!-- Pinterest -->
@@ -240,7 +240,7 @@
                     
                     <h3>Temos uma <b> oferta imperdível</b> para você!</h3>
                 </div> 
-                <ul class="content-offer">
+                <ul class="content-offer" id="offer">
                         <a href="https://app.monetizze.com.br/checkout/DCB167371" target="_blank" rel="noopener noreferrer"><li><img src="assets/plano-1.webp" alt="preço do travesseiro regulável" width="280" height="517"></li></a>
                         <a href="https://app.monetizze.com.br/checkout/DRB167372" target="_blank" rel="noopener noreferrer"><li><img src="assets/plano-2.webp" alt="preço do travesseiro regulável" width="280" height="517"></li></a>
                         <a href="https://app.monetizze.com.br/checkout/DRB167372" target="_blank" rel="noopener noreferrer"><li><img src="assets/plano-3.webp" alt="preço do travesseiro regulável" width="280" height="517"></li></a>
@@ -300,8 +300,8 @@
                 <p>Dúvidas? entre em contato conosco: atendimento@rvfit.com.br ou (11) 94973-7100</p>
                 <nav>
                     <ul>
-                        <li> <a href="http://" target="_blank" rel="noopener noreferrer">Politica de privacidade</a> </li>
-                        <li><a href="http://" target="_blank" rel="noopener noreferrer">Termos de uso</a> </li>
+                        <li> <a href="termos.html" target="_blank" rel="noopener noreferrer">Politica de privacidade</a> </li>
+                        <li><a href="politica.html" target="_blank" rel="noopener noreferrer">Termos de uso</a> </li>
                     </ul>
                 </nav>
                 <p>Copyright 2022 – RVFIT LTDA CNPJ:12.416.634/0001-09 |Todos os Direitos Reservados </p>
