--- a/politica.html
+++ b/politica.html
@@ -18,10 +18,13 @@
     <link rel="icon" type="image/png" href="shared/favicon.png" />
 
     <!-- Stylesheets-->
-    <link rel="stylesheet" href="sources/main.css" />
+    <link href="sources/main.css" rel="stylesheet" />
+    <link href="sources/print.css" rel="stylesheet" media="print" />
+    <link href="sources/mobile.css" rel="stylesheet" media="screen and (max-width: 600px)" />
+
 
 </head>
 <body>
-    
+
 </body>
 </html>
