--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <picture>
                     <source media="(min-width:768px)" srcset="assets/banner-chega-desk.webp" type="image/webp" />
                     <source media="(min-width:320px)" srcset="assets/banner-chega-mob.webp" type="image/webp" />
-                    <img src="assets/banner-chega-desk.webp" alt="Banner do site Travesseiro Altura regulável" width="1920" height="600" type="image/webp" />
+                    <img loading="lazy" src="assets/banner-chega-desk.webp" alt="Banner do site Travesseiro Altura regulável" width="1920" height="600" type="image/webp" />
                 </picture>
             </div>
         </section>
@@ -146,7 +146,7 @@
                 <ul>
                     <li>
                         <h3> Travesseiro regulável com tecido perfilado</h3>
-                        <p>O Alto relevo do perfilado proposciona uma alto massagem relaxante, isso porque o seu formato d+a a sensaçao de centenas de dedos massangeando seu corpo.</p>
+                        <p>O Alto relevo do perfilado proporciona uma alto massagem relaxante, isso porque o seu formato d+a a sensação de centenas de dedos massageando seu corpo.</p>
                     </li>
                     <li>
                         <h3> Travesseiro regulável com infravermelho</h3>
@@ -176,7 +176,7 @@
                             <svg class="icon icon-stars"><use xlink:href="assets/i.svg#icon-stars"></use></svg>
                             <svg class="icon icon-stars"><use xlink:href="assets/i.svg#icon-stars"></use></svg>
                             <svg class="icon icon-stars"><use xlink:href="assets/i.svg#icon-stars"></use></svg>
-                            <h4>Gabi Monteiro</h4>
+                            <span>Gabi Monteiro</span>
                             <p>Parabéns pela qualidade do produto. O travesseiro é bem confortável Há um mês</p>
                         </li>
                         <li class="avaliacao">
@@ -185,7 +185,7 @@
                             <svg class="icon icon-stars"><use xlink:href="assets/i.svg#icon-stars"></use></svg>
                             <svg class="icon icon-stars"><use xlink:href="assets/i.svg#icon-stars"></use></svg>
                             <svg class="icon icon-stars"><use xlink:href="assets/i.svg#icon-stars"></use></svg>
-                            <h4>Flávio Almeida</h4>
+                            <span>Flávio Almeida</span>
                             <p>Maravilhosos!!! comprem sem medo eles são ótimo e bem resistentes eu estou adorando!!!</p>
                         </li>
                         <li class="avaliacao">
@@ -194,7 +194,7 @@
                             <svg class="icon icon-stars"><use xlink:href="assets/i.svg#icon-stars"></use></svg>
                             <svg class="icon icon-stars"><use xlink:href="assets/i.svg#icon-stars"></use></svg>
                             <svg class="icon icon-stars"><use xlink:href="assets/i.svg#icon-stars"></use></svg>
-                            <h4>Marcela</h4>
+                            <span>Marcela</span>
                             <p>Tudo de bom adorei muito confortável eu gosto do travesseiro mais alto antes eu precisava ter vários travesseiros que ficava escorrendo agora eu não tenho mais este problema obrigado pelo solução RVFIT amo essa empresa!!! [RECOMENDO]</p>
                         </li>
                         <li class="avaliacao">
@@ -203,7 +203,7 @@
                             <svg class="icon icon-stars"><use xlink:href="assets/i.svg#icon-stars"></use></svg>
                             <svg class="icon icon-stars"><use xlink:href="assets/i.svg#icon-stars"></use></svg>
                             <svg class="icon icon-stars"><use xlink:href="assets/i.svg#icon-stars"></use></svg>
-                            <h4>Paulo Deluca</h4>
+                            <span>Paulo Deluca</span>
                             <p>Satisfeito, travesseiro de ótima qualidade, excelente relação custo benefício inclusive indiquei alguns pacientes da clínica para comprar com vocês, obrigado!</p>
                         </li>
                         <li class="avaliacao">
@@ -212,7 +212,7 @@
                             <svg class="icon icon-stars"><use xlink:href="assets/i.svg#icon-stars"></use></svg>
                             <svg class="icon icon-stars"><use xlink:href="assets/i.svg#icon-stars"></use></svg>
                             <svg class="icon icon-stars"><use xlink:href="assets/i.svg#icon-stars"></use></svg>
-                            <h4>Ivana silva</h4>
+                            <span>Ivana silva</span>
                             <p>Muito bom Super Recomendo, comprei para mim e meu esposo que roncava demais nossa agora são noites silenciosas nota 10, 5 estrelas vocês merecem todas</p>
                         </li>
                     </ul>
@@ -223,11 +223,18 @@
         <section class="s-depoimentos">
             <div class="container">
                 <div class="depoimentos-title">
-                    <h2>Assiste a os depoimentos da quem usa o Travesseiro Regulável RVFIT</h2>
+                    <h2>Assista os depoimentos da quem usa o Travesseiro Regulável RVFIT</h2>
                     <h3>Estamos felizes em receber sempre elogios de nossos clientes, com retorno de <strong>99% de feedback positivo.</strong> </h3>
                 </div>
                 <div class="content-depoimentos">
+                    
+                    <iframe src="https://www.youtube.com/embed/ycH0AL07REw"></iframe>
 
+                    <iframe src="https://www.youtube.com/embed/g_jh-Hj7Re0"></iframe>
+
+                    <iframe src="https://www.youtube.com/embed/1iN8VGmGrv4"></iframe>
+
+                    <iframe src="https://www.youtube.com/embed/cWYl46pFeRU"></iframe>
                 </div>
             </div>
         </section>
@@ -241,9 +248,9 @@
                     <h3>Temos uma <b> oferta imperdível</b> para você!</h3>
                 </div> 
                 <ul class="content-offer" id="offer">
-                        <a href="https://app.monetizze.com.br/checkout/DCB167371" target="_blank" rel="noopener noreferrer"><li><img src="assets/plano-1.webp" alt="preço do travesseiro regulável" width="280" height="517"></li></a>
-                        <a href="https://app.monetizze.com.br/checkout/DRB167372" target="_blank" rel="noopener noreferrer"><li><img src="assets/plano-2.webp" alt="preço do travesseiro regulável" width="280" height="517"></li></a>
-                        <a href="https://app.monetizze.com.br/checkout/DRB167372" target="_blank" rel="noopener noreferrer"><li><img src="assets/plano-3.webp" alt="preço do travesseiro regulável" width="280" height="517"></li></a>
+                        <li><a href="https://app.monetizze.com.br/checkout/DCB167371" target="_blank" rel="noopener noreferrer"><img src="assets/plano-1.webp" alt="preço do travesseiro regulável" width="280" height="517"></a></li>
+                        <li><a href="https://app.monetizze.com.br/checkout/DRB167372" target="_blank" rel="noopener noreferrer"><img src="assets/plano-2.webp" alt="preço do travesseiro regulável" width="280" height="517"></a></li>
+                        <li><a href="https://app.monetizze.com.br/checkout/DDV172628" target="_blank" rel="noopener noreferrer"><img src="assets/plano-3.webp" alt="preço do travesseiro regulável" width="280" height="517"></a></li>
                 </ul>
                 <img class="selos" loading="lazy" src="assets/selos.webp" alt="selos de garantia" width="410" height="37">   
             </div>
@@ -307,5 +314,8 @@
                 <p>Copyright 2022 – RVFIT LTDA CNPJ:12.416.634/0001-09 |Todos os Direitos Reservados </p>
             </div>
     </footer>
+
 </body>
 </html>
+
+
