--- a/index.html
+++ b/index.html
@@ -164,57 +164,19 @@
             <div class="container">
                 <header class="google-title">
                     <h2>99% dos feedbacks são positivos</h2>
-                    <svg class="icon logo-google"><use xlink:href="assets/i.svg#logo-google"></use></svg>
-                    <svg class="icon stars-google"><use xlink:href="assets/i.svg#stars-google"></use></svg>
-                    <p>Com base em <strong>59 avaliações.</strong> </p>
                 </header>
                 <div class="content-google">
                     <ul>
                         <li class="avaliacao">
-                            <svg class="icon icon-stars"><use xlink:href="assets/i.svg#icon-stars"></use></svg>
-                            <svg class="icon icon-stars"><use xlink:href="assets/i.svg#icon-stars"></use></svg>
-                            <svg class="icon icon-stars"><use xlink:href="assets/i.svg#icon-stars"></use></svg>
-                            <svg class="icon icon-stars"><use xlink:href="assets/i.svg#icon-stars"></use></svg>
-                            <svg class="icon icon-stars"><use xlink:href="assets/i.svg#icon-stars"></use></svg>
-                            <span>Gabi Monteiro</span>
-                            <p>Parabéns pela qualidade do produto. O travesseiro é bem confortável Há um mês</p>
+                            <img loading="lazy" src="assets/depoimento-1.webp" alt="depoimento" width="640" height="1140">
                         </li>
                         <li class="avaliacao">
-                            <svg class="icon icon-stars"><use xlink:href="assets/i.svg#icon-stars"></use></svg>
-                            <svg class="icon icon-stars"><use xlink:href="assets/i.svg#icon-stars"></use></svg>
-                            <svg class="icon icon-stars"><use xlink:href="assets/i.svg#icon-stars"></use></svg>
-                            <svg class="icon icon-stars"><use xlink:href="assets/i.svg#icon-stars"></use></svg>
-                            <svg class="icon icon-stars"><use xlink:href="assets/i.svg#icon-stars"></use></svg>
-                            <span>Flávio Almeida</span>
-                            <p>Maravilhosos!!! comprem sem medo eles são ótimo e bem resistentes eu estou adorando!!!</p>
+                            <img loading="lazy" src="assets/depoimento-2.webp" alt="depoimento" width="640" height="1140">
                         </li>
                         <li class="avaliacao">
-                            <svg class="icon icon-stars"><use xlink:href="assets/i.svg#icon-stars"></use></svg>
-                            <svg class="icon icon-stars"><use xlink:href="assets/i.svg#icon-stars"></use></svg>
-                            <svg class="icon icon-stars"><use xlink:href="assets/i.svg#icon-stars"></use></svg>
-                            <svg class="icon icon-stars"><use xlink:href="assets/i.svg#icon-stars"></use></svg>
-                            <svg class="icon icon-stars"><use xlink:href="assets/i.svg#icon-stars"></use></svg>
-                            <span>Marcela</span>
-                            <p>Tudo de bom adorei muito confortável eu gosto do travesseiro mais alto antes eu precisava ter vários travesseiros que ficava escorrendo agora eu não tenho mais este problema obrigado pelo solução RVFIT amo essa empresa!!! [RECOMENDO]</p>
+                            <img loading="lazy" src="assets/depoimento-2.webp" alt="depoimento" width="640" height="1140">
                         </li>
-                        <li class="avaliacao">
-                            <svg class="icon icon-stars"><use xlink:href="assets/i.svg#icon-stars"></use></svg>
-                            <svg class="icon icon-stars"><use xlink:href="assets/i.svg#icon-stars"></use></svg>
-                            <svg class="icon icon-stars"><use xlink:href="assets/i.svg#icon-stars"></use></svg>
-                            <svg class="icon icon-stars"><use xlink:href="assets/i.svg#icon-stars"></use></svg>
-                            <svg class="icon icon-stars"><use xlink:href="assets/i.svg#icon-stars"></use></svg>
-                            <span>Paulo Deluca</span>
-                            <p>Satisfeito, travesseiro de ótima qualidade, excelente relação custo benefício inclusive indiquei alguns pacientes da clínica para comprar com vocês, obrigado!</p>
-                        </li>
-                        <li class="avaliacao">
-                            <svg class="icon icon-stars"><use xlink:href="assets/i.svg#icon-stars"></use></svg>
-                            <svg class="icon icon-stars"><use xlink:href="assets/i.svg#icon-stars"></use></svg>
-                            <svg class="icon icon-stars"><use xlink:href="assets/i.svg#icon-stars"></use></svg>
-                            <svg class="icon icon-stars"><use xlink:href="assets/i.svg#icon-stars"></use></svg>
-                            <svg class="icon icon-stars"><use xlink:href="assets/i.svg#icon-stars"></use></svg>
-                            <span>Ivana silva</span>
-                            <p>Muito bom Super Recomendo, comprei para mim e meu esposo que roncava demais nossa agora são noites silenciosas nota 10, 5 estrelas vocês merecem todas</p>
-                        </li>
+                        
                     </ul>
                 </div>
             </div>
