--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Google+ / Schema.org -->
     <meta itemprop="name" content="Travesseiro altura regulável" />
     <meta itemprop="description" content="Travesseiro altura regulável, Tenha um sono 10X mais relaxante e reparador logo nas primeira noite!." />
-    <meta itemprop="image" content="shared/thumbnail.webp" />
+    <meta itemprop="image" content="shared/thumbnail.jpg" />
     <link rel="publisher" href="https://plus.google.com/+suapagina" />
 
     <!-- Open Graph / Facebook & Whatsapp & Instagram -->
@@ -29,7 +29,7 @@
     <meta property="og:url" content="https://www.travesseirorvfit.com.br" />
     <meta property="og:site_name" content="Travesseiro altura regulável" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="share/thumbnail.webp" />
+    <meta property="og:image" content="share/thumbnail.jpg" />
     <meta property="og:locale" content="pt_BR" />
     <meta property="og:image:type" content="image/jpg" />
     <meta property="og:image:width" content="300" />
@@ -40,7 +40,7 @@
     <meta name="twitter:description" content="Travesseiro altura regulável, Tenha um sono 10X mais relaxante e reparador logo nas primeira noite!." />
     <meta name="twitter:url" content="https://www.travesseirorvfit.com.br" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image" content="shared/thumbnail.webp" />
+    <meta name="twitter:image" content="shared/thumbnail.jpg" />
     <meta name="twitter:creator" content="@author" />
 
     <!-- Pinterest -->
