--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <meta property="og:url" content="https://www.travesseirorvfit.com.br" />
     <meta property="og:site_name" content="Travesseiro altura regulável" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="share/thumbnail.jpg" />
+    <meta property="og:image" content="shared/thumbnail.jpg" />
     <meta property="og:locale" content="pt_BR" />
     <meta property="og:image:type" content="image/jpg" />
     <meta property="og:image:width" content="300" />
