--- a/index.html
+++ b/index.html
@@ -165,19 +165,12 @@
                 <header class="google-title">
                     <h2>99% dos feedbacks são positivos</h2>
                 </header>
-                <div class="content-google">
-                    <ul>
-                        <li class="avaliacao">
-                            <img loading="lazy" src="assets/depoimento-1.webp" alt="depoimento" width="640" height="1140">
-                        </li>
-                        <li class="avaliacao">
-                            <img loading="lazy" src="assets/depoimento-2.webp" alt="depoimento" width="640" height="1140">
-                        </li>
-                        <li class="avaliacao">
-                            <img loading="lazy" src="assets/depoimento-2.webp" alt="depoimento" width="640" height="1140">
-                        </li>
-                        
-                    </ul>
+                <div class="content_recomend">
+                     <figure>
+                        <img loading="lazy" src='assets/depoimento-1.webp' alt='depoimento sobre o travesseiro altura regulável' width="640" height="1140">
+                        <img loading="lazy" src='assets/depoimento-2.webp' alt='depoimento sobre o travesseiro altura regulável' width="640" height="1140">
+                        <img loading="lazy" src='assets/depoimento-3.webp' alt='depoimento sobre o travesseiro altura regulável' width="640" height="1140">
+                    </figure>
                 </div>
             </div>
         </section>
@@ -266,7 +259,7 @@
     <footer>
             <div class="container">
                 <svg class="logo"><use xlink:href="assets/i.svg#logo"></use></svg>
-                <p>Dúvidas? entre em contato conosco: atendimento@rvfit.com.br ou (11) 94973-7100</p>
+                <p>Dúvidas? entre em contato conosco: <a href="mailto:atendimento@rvfit.com.br">atendimento@rvfit.com.br</a>  ou <a href="https://web.whatsapp.com/send?phone=55%2011%2094973-7100&text=Ol%C3%A1%2C+tenho+algumas+d%C3%BAvidas" target="_blank" rel="noopener noreferrer"></a> (11) 94973-7100</p>
                 <nav>
                     <ul>
                         <li> <a href="termos.html" target="_blank" rel="noopener noreferrer">Politica de privacidade</a> </li>
