--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 <ul>
                     <li>
                         <h3> Travesseiro regulável com tecido perfilado</h3>
-                        <p>O Alto relevo do perfilado proporciona uma alto massagem relaxante, isso porque o seu formato d+a a sensação de centenas de dedos massageando seu corpo.</p>
+                        <p>O Alto relevo do perfilado proporciona uma alto massagem relaxante, isso porque o seu formato da a sensação de centenas de dedos massageando seu corpo.</p>
                     </li>
                     <li>
                         <h3> Travesseiro regulável com infravermelho</h3>
